[project]
name = "rag-quiz-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-core>=0.1.0",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "openai>=2.15.0",
    "pg8000>=1.31.5",
    "pypdf>=6.6.0",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.53.1",
    "tiktoken>=0.12.0",
    "youtube-transcript-api>=1.2.3",
]
